--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         Hi, I'm Maninder
                     </h1>
                     <h2 class="text-2xl md:text-3xl font-medium text-gray-700 mb-8">
-                        Front-end Developer
+                        Full Stack Developer(Front-end major)
                     </h2>
                     <p class="text-lg text-gray-600 mb-8 max-w-lg">
                      I craft smooth, interactive web experiences using React, Framer motion, locomotive and GSAP.
@@ -190,8 +190,8 @@ Blending design with motion, I build interfaces that feel as good as they look.
             
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center scroll-animate">
-                    <div class="w-64 h-64 rounded-full bg-gradient-to-br from-blue-100 to-green-100 border-4 border-white shadow-xl overflow-hidden">
-                        <img src="https://media.licdn.com/dms/image/v2/D5603AQETNSFEbJX-QQ/profile-displayphoto-shrink_800_800/B56ZbiEI2bG4Ac-/0/1747549458744?e=1753920000&v=beta&t=VudBhPYMySsCKclcrpd5E7oNiN_KVtpO1uUfgIEfiyw" 
+                    <div class="w-68 h-68 rounded-full bg-gradient-to-br from-blue-100 to-green-100 border-4 border-white shadow-xl overflow-hidden">
+                        <img src="img/Profile.jpg" 
                              alt="Profile" class="w-full h-full object-cover">
                     </div>
                 </div>
